--- a/server/WebContent/WEB-INF/web.xml
+++ b/server/WebContent/WEB-INF/web.xml
@@ -19,6 +19,14 @@
         <servlet-name>BaseServlet</servlet-name>
         <url-pattern>/BaseServlet</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>IndexServlet</servlet-name>
+        <servlet-class>com.lib.web.servlet.IndexServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>IndexServlet</servlet-name>
+        <url-pattern>/IndexServlet</url-pattern>
+    </servlet-mapping>
     <filter>
         <filter-name>EncodingFilter</filter-name>
         <filter-class>com.lib.web.filter.EncodingFilter</filter-class>
