--- a/server/WebContent/WEB-INF/web.xml
+++ b/server/WebContent/WEB-INF/web.xml
@@ -35,6 +35,14 @@
         <filter-name>EncodingFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+    <filter>
+        <filter-name>LoginFilter</filter-name>
+        <filter-class>com.lib.web.filter.LoginFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>LoginFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
     <servlet>
         <description></description>
         <display-name>UserServlet</display-name>
