--- a/server/WebContent/WEB-INF/web.xml
+++ b/server/WebContent/WEB-INF/web.xml
@@ -44,7 +44,6 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
     <servlet>
-        <description></description>
         <display-name>UserServlet</display-name>
         <servlet-name>UserServlet</servlet-name>
         <servlet-class>com.lib.web.servlet.UserServlet</servlet-class>
@@ -52,6 +51,15 @@
     <servlet-mapping>
         <servlet-name>UserServlet</servlet-name>
         <url-pattern>/UserServlet</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>CategoryServlet</servlet-name>
+        <servlet-class>com.lib.web.servlet.CategoryServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>CategoryServlet</servlet-name>
+        <url-pattern>/CategoryServlet</url-pattern>
     </servlet-mapping>
 
 </web-app>
