--- a/spring/src/jdbc.properties
+++ b/spring/src/jdbc.properties
@@ -1,4 +1,5 @@
 jdbc.driverClass=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/store_db?useSSL=false&serverTimezone=GMT
+jdbc.url2=jdbc:mysql://localhost:3306/bank?useSSL=false&serverTimezone=GMT
 jdbc.username=root
 jdbc.password=123
